crates/snapshot/tests/compile_fail/unknown_category.stderr
error: `cache` is not a state category. Valid: `settings`, `document`, `view`, `session`, `transient`, `derived`
 --> tests/compile_fail/unknown_category.rs:9:16
  |
9 |     #[snapshot(cache)]
  |                ^^^^^
